--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,15 +3,33 @@ html {
   text-align: center;
 }
 
-h1 {
+h1, h2, h3 {
   font-family: Verdana;
+
+
+}
+h1 {
   font-weight: Normal;
   font-size: 50px;
   color: white;
-  text-align: center;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+h3{
+  font-size: 21px;
+  color: Gray;
 }
 
 a {
   color: Aquamarine;
   font-size: 16px;
+}
+
+#footer {
+  text-align: right;
 }
